# OpenAlphaStack

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  AGENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_EN.md  SECURITY.md  Start-Claude-AlphaClaude.cmd  Start-Codex-AlphaClaude.cmd  anthropic_proxy.py  claude.py  config.py  docker-compose.yml  findings.md  logging_config.py  main.py  memory.py  package-lock.json  package.json  progress.md  pyproject.toml  requirements.txt  scheduler.py  setup-autostart.ps1  start-flyservice.cmd  start_bot.bat  stock.py  task_plan.md
.codex/: config.toml
.codex-plugin/: plugin.json
.github/: CONTRIBUTING.md  SECURITY.md
claude/: client.py
dashboard/: index.html  vite.config.ts
deploy/: Dockerfile  Dockerfile.public  README.md  docker-compose.yml
docs/: CHANGELOG.md  README_EN.md  agent-guide.md  architecture.md  feishu-bot-menu.md  getting-started.md  media-kit.md  project-comparison.md  public-mcp.md  roadmap.md  skills.md
feishu/: bot.py  group.py  user.py  ws.py
scheduler/: tasks.py
scripts/: dev-backend.ps1  dev-frontend.ps1  dev-stop.ps1  generate_marketing_assets.py  generate_tool_table.py  smoke_paper_loop.py
site/: 404.html  en.html  index.html  llms.txt  privacy-en.html  privacy.html  robots.txt  sitemap.xml  styles.css  support-en.html  support.html  terms-en.html  terms.html
skills/: README.md  example-stock-alert.md  trading-principles.md
stock/: data.py
strategies/: breakout.json  default.json  hot_money.json  value.json
tests/: test_anthropic_proxy.py  test_app_shutdown.py  test_dashboard_cache.py  test_feishu_event_dedupe.py  test_feishu_run_control.py  test_llm_client_safe.py  test_logging_config.py  (+8 more)
(+259 files in other folders)
